--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <main>
     <div class="container">
       <div class="image">
-        <img src="./assets/images/illustration-sign-up-mobile.svg" alt="sign-up-illustration image">
+        <img src="./assets/images/illustration-sign-up-mobile.svg" class="mobile-img" alt="sign-up-illustration image">
+        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="" class="desk-img">
       </div>
       <div class="text-div">
         <h1 class="update-intro">Stay Updated!</h1>
