addition and updates

--- a/success.html
+++ b/success.html
@@ -63,7 +63,7 @@
     <div class="fluid-container">
         <img class="success-img" src="assets/images/icon-success.svg" alt="success-icon">
         <h1 class="success-heading">Thanks for Subscribing!</h1>
-        <p class="success-text">A confirmation message has been sent to <strong>adefila44@company.com.</strong> Please open it and click the button inside to confirm your subscription.</p>
+        <p class="success-text">A confirmation message has been sent to <strong class="email-input"></strong> Please open it and click the button inside to confirm your subscription.</p>
 
     </div>
     <div class="button">
